[gd_scene load_steps=2 format=3 uid="uid://c1x8ewea1slyg"]

[ext_resource type="Script" uid="uid://4e8e4hl7ovcf" path="res://Scrips/checklist.gd" id="1_h241g"]

[node name="ChecklistMenu" type="Control"]
layout_mode = 3
anchor_right = 0.5
anchor_bottom = 1.0
offset_right = -7.0
offset_bottom = 53.0
scale = Vector2(0.2512, 0.2512)
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_h241g")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.615
anchor_bottom = 0.857
offset_right = 0.0650024
offset_bottom = 0.242981
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer_Name" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer_Name"]
layout_mode = 2
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer_Name"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Animal Name"

[node name="HBoxContainer_AddTask" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer_AddTask"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "New Task"

[node name="Button" type="Button" parent="Panel/VBoxContainer/HBoxContainer_AddTask"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Add Task"

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Tasks:"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChecklistContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="KillButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Kill"
